esercizio completo tranne scritte su immagini

--- a/index.html
+++ b/index.html
@@ -10,26 +10,24 @@
     <title>HTML'S HISTORY</title>
 </head>
 <body>
+    <div id="immagine-i"><img id="logo" src="img/logo.svg" alt=""></div>
     <header>
-           <figure>
-               <img src="img/pattern.png" alt="sfondo">
-            </figure>
-                <h1>Internet dev essere al servizio del bene pubblico:</h1><br>
-                <h1>il manifesto di Tim Bernes Lee</h1>
-                <figure>
-                    <img src="img/tim-1.jpg" alt="tim">
-                    <img src="img/tim-2.jpg" alt="tim">
-                </figure>
-                <ol>
-                    <li></li>
-                    <li></li>
-                </ol>
+        <h1>"Internet dev essere al servizio del bene pubblico:"
+        il manifesto di Tim Bernes Lee</h1>
+        <figure>
+            <figcaption>
+                <img src="img/tim-1.jpg" alt="tim">  
+                <img src="img/tim-2.jpg" alt="tim">
+                <p>1.questa e una foto di tim</p>
+                <p>2.questa e la seconda foto di tim</p>
+            </figcaption>
+        </figure>
     </header>
     <main>
         <section>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod aperiam molestias sapiente ea dolore accusantium, nobis deleniti reprehenderit expedita illum tenetur, exercitationem, quidem tempore repellendus necessitatibus. 
-                Provident dignissimos numquam facilis?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod aperiam molestias sapiente ea dolore accusantium, nobis deleniti reprehenderit expedita illum tenetur, exercitationem,
+                Provident dignissimos <span class="golden-decoration"> facilis?
+                Lorem ipsum dolor sit amet consectetur</span>adipisicing elit. Quod aperiam molestias sapiente ea dolore accusantium, nobis deleniti reprehenderit expedita illum tenetur, exercitationem,
                 quidem tempore repellendus necessitatibus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit beatae dolorum nulla voluptas unde soluta. Qui nobis architecto tempora saepe, ipsa eaque veniam.
                 </p>
     
@@ -42,6 +40,7 @@
         </ul>
         </section>
         <section>
+            <div id="table">
             <table>
                 <thead>
                     <tr>
@@ -56,7 +55,7 @@
                         <td>lorem ipsum dolor</td>
                         <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendmi sint officiis ducimus unde ab totam omnis commodi, minima quo? </td>
                     </tr>
-                    <tr>
+                    <tr id="white-row">
                         <td>lorem ipsum dolor</td>
                         <td>lorem ipsum dolor</td>
                         <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendmi sint officiis ducimus unde ab totam omnis commodi, minima quo? </td>
@@ -68,19 +67,18 @@
                     </tr>
                 </tbody> 
             </table>
+        </div>
         </section>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quae similique molestias cupiditate odit officiis, earum laborum omnis dolorum, impedit placeat, illum numquam ipsum
-            a alias consequuntur vel deleniti! Deleniti.
+        a alias <span class="golden-decoration">consequuntur vel deleniti! Deleniti.</span>Lorem ipsum dolor
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit doloremque iste nobis ut mollitia, numquam eius repudiandae ipsum! Quod labore expedita asperiores in eaque suscipit illum dolore aspernatur perferendis animi!</p>
     </main>
     <footer>
-        <h4>potrebbero interessarti:</h4>
+        <h4>Potrebbero interessarti:</h4>
         <div>
-            <img src="img/monitor.jpg" alt="monitor">
+        <img class="footpaper" src="img/monitor.jpg" alt="graph">
         </div>
-             <img src="img/graph.jpg" alt="graph">
-        </figure>
+        <img class="footpaper" src="img/graph.jpg" alt="graph">
     </footer>
-    
 </body>
 </html>
