esercizio completo senza bonus

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <header>
         <h1>"Internet dev essere al servizio del bene pubblico:"
         il manifesto di Tim Bernes Lee</h1>
+        <h4>scritto da <a href="https://boolean.careers/?utm_source=google&utm_campaign=it_search_brand&utm_medium=cpc&utm_content=boolean&utm_term=boolean&gclid=CjwKCAjw9-KTBhBcEiwAr19ig8TWy16OjG5hEOjaHBF-xBJtL7oyRKJI8C0IFPxAVyBAGulyBgvR_BoCgcUQAvD_BwE" target="_blank">The Booleaners</a></h4>
+        <h4>il 10/10/2020</h4>
         <figure>
             <figcaption>
                 <img src="img/tim-1.jpg" alt="tim">  
@@ -41,33 +43,33 @@
         </section>
         <section>
             <div id="table">
-            <table>
-                <thead>
-                    <tr>
-                        <th>lorem ipsum dolor</th>
-                        <th colspan="1">lorem ipsum dolor</th>
-                        <th colspan="1">lorem ipsum dolor</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>lorem ipsum dolor</td>
-                        <td>lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendmi sint officiis ducimus unde ab totam omnis commodi, minima quo? </td>
-                    </tr>
-                    <tr id="white-row">
-                        <td>lorem ipsum dolor</td>
-                        <td>lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendmi sint officiis ducimus unde ab totam omnis commodi, minima quo? </td>
-                    </tr>
-                    <tr>
-                        <td>lorem ipsum dolor</td>
-                        <td>lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendmi sint officiis ducimus unde ab totam omnis commodi, minima quo? </td>
-                    </tr>
-                </tbody> 
-            </table>
-        </div>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>lorem ipsum dolor</th>
+                            <th colspan="1">lorem ipsum dolor</th>
+                            <th colspan="1">lorem ipsum dolor</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>lorem ipsum dolor</td>
+                            <td>lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendmi sint officiis ducimus unde ab totam omnis commodi, minima quo? </td>
+                        </tr>
+                        <tr id="white-row">
+                            <td>lorem ipsum dolor</td>
+                            <td>lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendmi sint officiis ducimus unde ab totam omnis commodi, minima quo? </td>
+                        </tr>
+                        <tr>
+                            <td>lorem ipsum dolor</td>
+                            <td>lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendmi sint officiis ducimus unde ab totam omnis commodi, minima quo? </td>
+                        </tr>
+                    </tbody> 
+                </table>
+            </div>
         </section>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quae similique molestias cupiditate odit officiis, earum laborum omnis dolorum, impedit placeat, illum numquam ipsum
         a alias <span class="golden-decoration">consequuntur vel deleniti! Deleniti.</span>Lorem ipsum dolor
@@ -75,10 +77,8 @@
     </main>
     <footer>
         <h4>Potrebbero interessarti:</h4>
-        <div>
-        <img class="footpaper" src="img/monitor.jpg" alt="graph">
-        </div>
-        <img class="footpaper" src="img/graph.jpg" alt="graph">
+        <div class="footpaper-1"><h3>Lorem ipsum dolor</h3></div>
+        <div class="footpaper-2"><h3>Lorem ipsum dolor</h3></div>
     </footer>
 </body>
 </html>
