esercizio completo con modifiche margini

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div id="immagine-i"><img id="logo" src="img/logo.svg" alt=""></div>
+    <div class="container">
     <header>
         <h1>"Internet dev essere al servizio del bene pubblico:"
         il manifesto di Tim Bernes Lee</h1>
@@ -80,5 +81,6 @@
         <div class="footpaper-1"><h3>Lorem ipsum dolor</h3></div>
         <div class="footpaper-2"><h3>Lorem ipsum dolor</h3></div>
     </footer>
+</div>
 </body>
 </html>
